tests/baselines/reference/optionalArgsWithDefaultValues(strict=true).errors.txt
optionalArgsWithDefaultValues.ts(1,25): error TS1015: Parameter cannot have question mark and initializer.
optionalArgsWithDefaultValues.ts(4,27): error TS1015: Parameter cannot have question mark and initializer.
optionalArgsWithDefaultValues.ts(5,28): error TS1015: Parameter cannot have question mark and initializer.
optionalArgsWithDefaultValues.ts(8,10): error TS1015: Parameter cannot have question mark and initializer.
optionalArgsWithDefaultValues.ts(9,10): error TS7006: Parameter 'x' implicitly has an 'any' type.
optionalArgsWithDefaultValues.ts(9,13): error TS1015: Parameter cannot have question mark and initializer.


==== optionalArgsWithDefaultValues.ts (6 errors) ====
    function foo(x: number, y?:boolean=false, z?=0) {}
                            ~
!!! error TS1015: Parameter cannot have question mark and initializer.
    
    class CCC {
        public foo(x: number, y?:boolean=false, z?=0) {}
                              ~
!!! error TS1015: Parameter cannot have question mark and initializer.
        static foo2(x: number, y?:boolean=false, z?=0) {}
                               ~
!!! error TS1015: Parameter cannot have question mark and initializer.
    }
    
    var a = (x?=0) => { return 1; };
             ~
!!! error TS1015: Parameter cannot have question mark and initializer.
    var b = (x, y?:number = 2) => { x; };
             ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                ~
!!! error TS1015: Parameter cannot have question mark and initializer.